# MailSized

./: .gitignore  .render.yaml  Dockerfile  Makefile  README.md  build.sh  main.py  pyproject.toml  render.yaml  requirements.txt  setup.py
.github/workflows/: render-deploy.yml  smoke.yml
app/: main.py
app/static/: script.js  script.v4.js  style.css
app/templates/: blog-meet-mailsized.html  blogs.html  contact.html  how-it-works.html  index.html  privacy.html  terms.html
docs/: CHANGELOG.md  ops-runbook.md  post-deploy-checklist.md  smoke-tests.md  tech_readme.md
static/: script.js  style.css
templates/: index.html  terms.html
tests/: conftest.py  test_cleanup.py  test_compression_stress.py  test_contact.py  test_email.py  test_env_flags.py  test_flow.py  test_pricing.py  test_provider_targets.py  test_upload.py
